--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,7 +5,7 @@
   <title>Login</title>
   <link rel="stylesheet" href="css/style.css" />
   <style>
-    /* ADDED: hide/show forms */
+    /* ADDED: hide/show forms (though no longer used for reset forms in this file) */
     .hidden { display: none; }
     /* ADDED: toggle link style */
     .toggle-link {
@@ -14,49 +14,53 @@
       font-size: 0.9rem;
       color: #007bff;
       cursor: pointer;
+      text-decoration: none; /* Removed default underline */
     }
     .toggle-link:hover { text-decoration: underline; }
     /* ADDED: feedback messages */
     .message {
       text-align: center;
       margin: 1rem 0;
+      padding: 0.75rem;
+      border-radius: 4px;
+      font-weight: bold;
     }
-    .message.error { color: #c00; }
-    .message.success { color: #080; }
+    .message.error { color: #c00; background-color: #ffe0e0; border: 1px solid #c00;}
+    .message.success { color: #080; background-color: #e0ffe0; border: 1px solid #080;}
+
+    /* Basic form styling consistent with resetpass.html */
+    body { font-family: sans-serif; max-width:400px; margin:2rem auto; background-color: #f0f2f5;}
+    h2 { text-align: center; color: #333; margin-bottom: 2rem;}
+    form {
+      display:flex;
+      flex-direction:column;
+      gap:1rem;
+      background-color: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    input,button { padding:.75rem; font-size:1rem; border: 1px solid #ddd; border-radius: 4px;}
+    button {
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+      border: none;
+      transition: background-color 0.3s ease;
+    }
+    button:hover { background-color: #0056b3; }
   </style>
 </head>
 <body>
   <h2>Login</h2>
 
-  <!-- LOGIN FORM (existing) -->
   <form id="loginForm">
     <input type="email" id="loginEmail" placeholder="Email" required />
     <input type="password" id="loginPassword" placeholder="Password" required />
     <button type="submit">Login</button>
-    <!-- ADDED: link to show the “forgot password” form -->
-    <!--  <span id="showForgot" class="toggle-link">Forgot password?</span> -->
     <a href="resetpass.html" class="toggle-link">Forgot password?</a>
   </form>
 
-  <!-- ADDED: Forgot-password form (request reset email) -->
-  <form id="forgotForm" class="hidden">
-    <h3>Reset Password</h3>
-    <input type="email" id="forgotEmail" placeholder="Enter your email" required />
-    <button type="submit">Send reset link</button>
-    <span id="showLogin" class="toggle-link">Back to login</span>
-  </form>
-
-  <!-- ADDED: Reset-password form (enter uid, token, new password) -->
-  <form id="resetForm" class="hidden">
-    <h3>Set New Password</h3>
-    <input type="text" id="resetUid" placeholder="UID (from email link)" required />
-    <input type="text" id="resetToken" placeholder="Token (from email link)" required />
-    <input type="password" id="resetPassword" placeholder="New password" required />
-    <button type="submit">Submit new password</button>
-    <span id="showLogin2" class="toggle-link">Back to login</span>
-  </form>
-
-  <!-- ADDED: area for success/error feedback -->
   <div id="message" class="message"></div>
 
   <script src="js/auth.js"></script>
